added some thing to my code
added notation

--- a/Myopia-predictions.ipynb
+++ b/Myopia-predictions.ipynb
@@ -1026,6 +1026,15 @@
     "myopia_df['GROUP'] = predicted_clusters\n",
     "myopia_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 'worked with TA's and Other students to develop code and also looked some stuff up onon stackoverflow to help me find the answers need to get the right idea going'"
+   ]
   }
  ],
  "metadata": {
